--- a/app/src/main/res/layout/activity_order_comment.xml
+++ b/app/src/main/res/layout/activity_order_comment.xml
@@ -1,69 +1,58 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_01"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    android:background="@drawable/bg_01"
-    tools:context="com.naild2d.android.OrderDetailsActivity"
-    android:weightSum="1">
+    android:weightSum="1"
+    tools:context="com.naild2d.android.OrderDetailsActivity">
 
     <RelativeLayout
         android:id="@+id/home_head_bar"
-        android:layout_width="fill_parent"
-        android:layout_height="65dp"
-        android:orientation="horizontal"
-        android:layout_marginBottom="10dp"
-        android:paddingTop="5dp"
+        style="@style/NailD2D_TopBarLayout"
         android:background="@drawable/banner_top_green">
 
         <ImageButton
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:layout_marginLeft="10dp"
-            android:layout_centerInParent="true"
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/pkgls_back"
-            android:scaleType="centerInside"
-            android:background="@android:color/transparent" />
+            style="@style/NailD2D_TopBarBackButton"
+            android:background="@android:color/transparent"
+            android:onClick="back"
+            android:src="@drawable/pkgls_back" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            style="@style/NailD2D_TopBarCenterText"
+            android:background="@android:color/transparent"
             android:text="填写备注"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-            android:background="@android:color/transparent" />
+            android:textColor="#FFFFFF" />
     </RelativeLayout>
 
     <com.naild2d.android.component.ImageTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        app:image="@drawable/icon_location_pink"
         app:text="备注"
-        app:textSize="18"
         app:textColor="#000000"
-        app:image="@drawable/icon_location_pink"/>
+        app:textSize="18" />
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="New Text"
-        android:id="@+id/textView2"
         android:layout_weight="0.5"
-        android:background="@drawable/text_backgroud_gray"/>
+        android:background="@drawable/text_backgroud_gray" />
 
     <Button
         android:layout_width="120dp"
         android:layout_height="50dp"
-        android:text="确定"
-        android:textSize="18sp"
-        android:layout_marginTop="5dp"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/btn_shuicai_pink"/>
+        android:layout_marginTop="5dp"
+        android:background="@drawable/btn_shuicai_pink"
+        android:text="确定"
+        android:textSize="18sp" />
 </LinearLayout>
