--- a/app/src/main/res/layout/activity_packagelist.xml
+++ b/app/src/main/res/layout/activity_packagelist.xml
@@ -2,54 +2,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.naild2d.android.HomeActivity"
     android:background="@drawable/pkgls_bg"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.naild2d.android.HomeActivity">
         <RelativeLayout
             android:id="@+id/home_head_bar"
-            android:layout_width="fill_parent"
-            android:layout_height="85dp"
-            android:orientation="horizontal"
-            android:layout_marginBottom="10dp"
+            style="@style/NailD2D_TopBarLayout"
             android:background="@drawable/pkgls_top_bar">
 
             <ImageButton
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="40dp"
-                android:layout_alignParentLeft="true"
-                android:src="@drawable/pkgls_back"
-                android:scaleType="centerInside"
-                android:background="@android:color/transparent" />
+                style="@style/NailD2D_TopBarBackButton"
+                android:background="@android:color/transparent"
+                android:onClick="back"
+                android:src="@drawable/pkgls_back" />
 
             <TextView
-                android:layout_marginTop="36dp"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_centerHorizontal="true"
+                style="@style/NailD2D_TopBarCenterText"
+                android:background="@android:color/transparent"
                 android:text="美甲服务"
-                android:textColor="#FFFFFF"
-                android:textSize="30sp"
-                android:scaleType="centerInside"
-                android:background="@android:color/transparent" />
+                android:textColor="#FFFFFF" />
 
             <ImageButton
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="40dp"
-                android:layout_alignParentRight="true"
-                android:src="@drawable/pkgls_loc_normal"
-                android:scaleType="centerInside"
-                android:background="@android:color/transparent" />
+                style="@style/NailD2D_TopBarRightImageButton"
+                android:src="@drawable/pkgls_loc_normal" />
 
         </RelativeLayout>
-        <ListView
-            android:id="@+id/pkgls_list"
+
+    <com.naild2d.android.component.xlistview.XListView
+        android:id="@+id/list"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:divider="@drawable/pkgls_divider"
             android:choiceMode="singleChoice"
-            android:clickable="true" />
+        android:clickable="true"
+        android:divider="@android:color/transparent" />
 </LinearLayout>
