--- a/app/src/main/res/layout/activity_pending_order_list.xml
+++ b/app/src/main/res/layout/activity_pending_order_list.xml
@@ -1,161 +1,104 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="@drawable/bg_01"
-    android:orientation="vertical"
-    tools:context="com.naild2d.android.PendingOrderList">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    tools:context="com.naild2d.android.PendingOrderListActivity">
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+    android:background="@drawable/bg_01"
+        android:orientation="vertical">
     <RelativeLayout
         android:id="@+id/home_head_bar"
-        android:layout_width="fill_parent"
-        android:layout_height="65dp"
-        android:orientation="horizontal"
-        android:layout_marginBottom="10dp"
-        android:paddingTop="5dp"
+        style="@style/NailD2D_TopBarLayout"
         android:background="@drawable/banner_top_green">
 
         <ImageButton
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:layout_marginLeft="10dp"
-            android:layout_centerInParent="true"
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/pkgls_back"
-            android:scaleType="centerInside"
-            android:background="@android:color/transparent" />
+            style="@style/NailD2D_TopBarBackButton"
+            android:background="@android:color/transparent"
+            android:onClick="back"
+            android:src="@drawable/pkgls_back" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            style="@style/NailD2D_TopBarCenterText"
+            android:background="@android:color/transparent"
             android:text="预约填单"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-            android:background="@android:color/transparent" />
+            android:textColor="#FFFFFF" />
 
         <ImageButton
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginRight="10dp"
-            android:layout_centerInParent="true"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/icon_profile_white"
-            android:scaleType="centerInside"
-            android:background="@android:color/transparent" />
+            style="@style/NailD2D_TopBarRightImageButton"
+            android:src="@drawable/icon_profile_white" />
     </RelativeLayout>
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingTop="10dp"
         android:paddingBottom="5dp"
         android:paddingLeft="5dp"
-        android:paddingRight="5dp">
-        <RelativeLayout
+        android:paddingRight="5dp"
+        android:paddingTop="10dp">
+
+        <ListView
+            android:id="@+id/list"
             android:layout_width="fill_parent"
-            android:layout_height="50dp">
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="#FF0000"
-                android:id="@+id/imageView"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_centerInParent="true"
-                android:layout_marginLeft="5dp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="地中海小香风"
-                android:layout_centerInParent="true"
-                android:layout_toRightOf="@+id/imageView"
-                android:layout_toEndOf="@+id/imageView"
-                android:layout_marginLeft="5dp"
-                android:textSize="14sp"
-                android:textColor="#000000"/>
-
-            <EditText
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:text="1"
-                android:textSize="16sp"
-                android:layout_centerInParent="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:id="@+id/editText"
-                android:layout_marginRight="5dp"
-                android:background="#F7F7F7"
-                android:gravity="center"/>
-
-            <com.naild2d.android.component.PriceTextView
-                android:id="@+id/item_pending_order_list_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:price="200.00"
-                app:textSize="16"
-                android:layout_centerInParent="true"
-                android:layout_toLeftOf="@+id/editText"
-                android:layout_toStartOf="@+id/editText"
-                android:layout_marginRight="10dp"/>
-        </RelativeLayout>
+            android:layout_height="wrap_content"
+            android:divider="@android:color/transparent" />
         <ImageView
             android:layout_width="fill_parent"
             android:layout_height="1dp"
-            android:src="@drawable/underline_black"
-            android:layout_marginTop="15dp"/>
+            android:layout_marginTop="15dp"
+            android:src="@drawable/underline_black" />
     </LinearLayout>
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingRight="15dp"
-        android:paddingLeft="5dp"
-        android:paddingTop="10dp"
+        android:background="#F7F7F7"
         android:paddingBottom="10dp"
-        android:background="#F7F7F7">
+        android:paddingLeft="5dp"
+        android:paddingRight="15dp"
+        android:paddingTop="10dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_centerInParent="true"
             android:text="合计"
             android:textColor="#F6947B"
-            android:textSize="20sp"
-            android:layout_centerInParent="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:textSize="20sp" />
         <ImageView
             android:layout_width="11dp"
             android:layout_height="20dp"
-            android:src="@drawable/icon_yuan_pink"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@+id/textView"
-            android:layout_toStartOf="@+id/textView" />
+            android:layout_toLeftOf="@+id/price_total"
+            android:layout_toStartOf="@+id/price_total"
+            android:src="@drawable/icon_yuan_pink" />
         <TextView
+            android:id="@+id/price_total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="3dp"
             android:text="349"
             android:textColor="#F6947B"
-            android:textSize="20sp"
-            android:layout_centerInParent="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginLeft="3dp"
-            android:id="@+id/textView" />
+            android:textSize="20sp" />
     </RelativeLayout>
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:onClick="switchActivity"
         android:orientation="vertical"
-        android:paddingTop="15dp"
         android:paddingBottom="10dp"
         android:paddingLeft="5dp"
-        android:paddingRight="5dp">
+        android:paddingRight="5dp"
+        android:paddingTop="15dp"
+        android:tag="address">
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
@@ -165,43 +108,50 @@
                 android:layout_alignParentLeft="true"
                 android:layout_centerInParent="true"
                 android:layout_gravity="center_vertical"
+                android:focusable="false"
+                app:image="@drawable/icon_location_pink"
                 app:text="详细地址"
-                app:textSize="18"
                 app:textColor="#F6947B"
-                app:image="@drawable/icon_location_pink"/>
+                app:textSize="18" />
             <ImageView
                 android:id="@+id/right_arrow"
                 android:layout_width="22dp"
                 android:layout_height="22dp"
-                android:src="@drawable/right_arrow_pink"
                 android:layout_alignParentRight="true"
-                android:layout_centerInParent="true"/>
+                android:layout_centerInParent="true"
+                android:focusable="false"
+                android:src="@drawable/right_arrow_pink" />
             <TextView
+                android:id="@+id/address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="东花市北里8号楼..."
-                android:layout_gravity="center_vertical"
                 android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="5dp"
                 android:layout_toLeftOf="@+id/right_arrow"
                 android:layout_toStartOf="@+id/right_arrow"
-                android:textSize="14sp"
+                android:focusable="false"
+                android:text="东花市北里8号楼..."
                 android:textColor="#000000"
-                android:layout_marginRight="5dp"/>
+                android:textSize="14sp" />
         </RelativeLayout>
         <ImageView
             android:layout_width="fill_parent"
             android:layout_height="1dp"
-            android:src="@drawable/underline_black"
-            android:layout_marginTop="15dp"/>
+            android:layout_marginTop="15dp"
+            android:focusable="false"
+            android:src="@drawable/underline_black" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:onClick="switchActivity"
         android:orientation="vertical"
-        android:paddingTop="15dp"
         android:paddingBottom="10dp"
         android:paddingLeft="5dp"
-        android:paddingRight="5dp">
+        android:paddingRight="5dp"
+        android:paddingTop="15dp"
+        android:tag="time">
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
@@ -211,43 +161,50 @@
                 android:layout_alignParentLeft="true"
                 android:layout_centerInParent="true"
                 android:layout_gravity="center_vertical"
+                android:focusable="false"
+                app:image="@drawable/icon_clock_pink"
                 app:text="预约时间"
-                app:textSize="18"
                 app:textColor="#F6947B"
-                app:image="@drawable/icon_clock_pink"/>
+                app:textSize="18" />
             <ImageView
                 android:id="@+id/right_arrow1"
                 android:layout_width="22dp"
                 android:layout_height="22dp"
-                android:src="@drawable/right_arrow_pink"
                 android:layout_alignParentRight="true"
-                android:layout_centerInParent="true"/>
+                android:layout_centerInParent="true"
+                android:focusable="false"
+                android:src="@drawable/right_arrow_pink" />
             <TextView
+                android:id="@+id/time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="3月7日 18:00"
-                android:layout_gravity="center_vertical"
                 android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="5dp"
                 android:layout_toLeftOf="@+id/right_arrow1"
                 android:layout_toStartOf="@+id/right_arrow1"
-                android:textSize="14sp"
+                android:focusable="false"
+                android:text="3月7日 18:00"
                 android:textColor="#000000"
-                android:layout_marginRight="5dp"/>
+                android:textSize="14sp" />
         </RelativeLayout>
         <ImageView
             android:layout_width="fill_parent"
             android:layout_height="1dp"
-            android:src="@drawable/underline_black"
-            android:layout_marginTop="15dp"/>
+            android:layout_marginTop="15dp"
+            android:focusable="false"
+            android:src="@drawable/underline_black" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:onClick="switchActivity"
         android:orientation="vertical"
-        android:paddingTop="15dp"
         android:paddingBottom="10dp"
         android:paddingLeft="5dp"
-        android:paddingRight="5dp">
+        android:paddingRight="5dp"
+        android:paddingTop="15dp"
+        android:tag="comment">
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
@@ -257,42 +214,49 @@
                 android:layout_alignParentLeft="true"
                 android:layout_centerInParent="true"
                 android:layout_gravity="center_vertical"
+                android:focusable="false"
+                app:image="@drawable/icon_notebook_pink"
                 app:text="备注"
-                app:textSize="18"
                 app:textColor="#F6947B"
-                app:image="@drawable/icon_notebook_pink"/>
+                app:textSize="18" />
             <ImageView
                 android:id="@+id/right_arrow2"
                 android:layout_width="22dp"
                 android:layout_height="22dp"
-                android:src="@drawable/right_arrow_pink"
                 android:layout_alignParentRight="true"
                 android:layout_centerInParent="true"
+                android:focusable="false"
+                android:src="@drawable/right_arrow_pink"
                 />
             <TextView
+                android:id="@+id/comment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="请不要迟到呦~"
-                android:layout_gravity="center_vertical"
                 android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="5dp"
                 android:layout_toLeftOf="@+id/right_arrow2"
                 android:layout_toStartOf="@+id/right_arrow2"
-                android:textSize="14sp"
+                android:focusable="false"
+                android:text="请不要迟到呦~"
                 android:textColor="#000000"
-                android:layout_marginRight="5dp"/>
+                android:textSize="14sp" />
         </RelativeLayout>
         <ImageView
             android:layout_width="fill_parent"
             android:layout_height="1dp"
-            android:src="@drawable/underline_black"
-            android:layout_marginTop="15dp"/>
+            android:layout_marginTop="15dp"
+            android:focusable="false"
+            android:src="@drawable/underline_black" />
     </LinearLayout>
     <Button
         android:layout_width="120dp"
         android:layout_height="50dp"
-        android:text="下单"
-        android:textSize="18sp"
-        android:layout_marginTop="5dp"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/btn_shuicai_pink"/>
+        android:layout_marginTop="5dp"
+        android:background="@drawable/btn_shuicai_pink"
+        android:onClick="submit"
+        android:text="下单"
+        android:textSize="18sp" />
 </LinearLayout>
+</ScrollView>
