--- a/app/src/main/res/layout/component_image_text_view.xml
+++ b/app/src/main/res/layout/component_image_text_view.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
     <ImageView
         android:id="@+id/component_image_text_view_image"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:scaleType="centerInside"
         android:layout_gravity="center_vertical"
-        android:background="@android:color/transparent"/>
+        android:background="@android:color/transparent"
+        android:focusable="false"
+        android:scaleType="centerInside" />
     <TextView
         android:id="@+id/component_image_text_view_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:textColor="#DDDDDD"
+        android:layout_marginLeft="3dp"
+        android:focusable="false"
         android:text="ImageTextView"
-        android:textSize="20sp"
-        android:layout_marginLeft="3dp"/>
+        android:textColor="#DDDDDD"
+        android:textSize="20sp" />
 </LinearLayout>
