--- a/app/src/main/res/layout/component_price_text_view.xml
+++ b/app/src/main/res/layout/component_price_text_view.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent">
+    android:background="@android:color/transparent"
+    android:orientation="horizontal">
     <ImageView
         android:id="@+id/component_price_textView_yuan"
         android:layout_width="8dp"
         android:layout_height="11dp"
-        android:scaleType="centerInside"
         android:layout_gravity="center_vertical"
-        android:background="@drawable/icon_yuan_black"/>
+        android:background="@drawable/icon_yuan_black"
+        android:scaleType="centerInside" />
     <TextView
-        android:id="@+id/component_price_textview_price"
+        android:id="@+id/item_price"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:textColor="#000000"
-        android:textSize="16sp"
         android:layout_marginLeft="2dp"
-        android:text="0.00"/>
+        android:text="0.00"
+        android:textColor="#000000"
+        android:textSize="16sp" />
 </LinearLayout>
