--- a/app/src/main/res/layout/item_packge.xml
+++ b/app/src/main/res/layout/item_packge.xml
@@ -20,7 +20,7 @@
         android:layout_alignBottom="@+id/item_thumbnail"
         android:layout_alignTop="@+id/item_thumbnail"
         android:layout_toEndOf="@+id/item_thumbnail"
-        android:layout_toLeftOf="@+id/item_price"
+        android:layout_toLeftOf="@+id/item_price_layout"
         android:layout_toRightOf="@+id/item_thumbnail">
         <TableRow android:layout_weight="1" android:gravity="center_vertical">
             <LinearLayout
@@ -72,7 +72,7 @@
     </TableLayout>
 
     <RelativeLayout
-        android:id="@+id/item_price"
+        android:id="@+id/item_price_layout"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/item_thumbnail"
