--- a/app/src/main/res/layout/item_pending_order_list.xml
+++ b/app/src/main/res/layout/item_pending_order_list.xml
@@ -47,7 +47,7 @@
             android:textSize="16sp" />
 
         <com.naild2d.android.component.PriceTextView
-            android:id="@+id/item_price"
+            android:id="@+id/item_price_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
