--- a/app/src/main/res/layout/activity_order_coupon.xml
+++ b/app/src/main/res/layout/activity_order_coupon.xml
@@ -20,7 +20,7 @@
         <TextView
             style="@style/NailD2D_TopBarCenterText"
             android:background="@android:color/transparent"
-            android:text="订单详情"
+            android:text="优惠券"
             android:textColor="#FFFFFF" />
     </RelativeLayout>
 
