Move Activities to package activity

--- a/app/src/main/res/layout/activity_notice.xml
+++ b/app/src/main/res/layout/activity_notice.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/pkgls_bg"
     android:orientation="vertical"
-    tools:context="com.naild2d.android.HomeActivity">
+    tools:context="com.naild2d.android.activity.HomeActivity">
 
     <RelativeLayout
         android:id="@+id/home_head_bar"
