--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.naild2d.android.HomeActivity">
+    tools:context="com.naild2d.android.activity.HomeActivity">
 
     <LinearLayout
         android:layout_width="fill_parent"
