--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_01"
-    tools:context="com.naild2d.android.LoginActivity">
+    tools:context="com.naild2d.android.activity.LoginActivity">
 
     <RelativeLayout
         android:id="@+id/home_head_bar"
