--- a/app/src/main/res/layout/activity_order_comment.xml
+++ b/app/src/main/res/layout/activity_order_comment.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:weightSum="1"
-    tools:context="com.naild2d.android.OrderDetailsActivity">
+    tools:context="com.naild2d.android.activity.OrderDetailsActivity">
 
     <RelativeLayout
         android:id="@+id/home_head_bar"
