--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg_01"
     android:orientation="vertical"
-    tools:context="com.naild2d.android.OrderDetailsActivity">
+    tools:context="com.naild2d.android.activity.OrderDetailsActivity">
 
     <RelativeLayout
         android:id="@+id/home_head_bar"
