--- a/app/src/main/res/layout/activity_package_detail.xml
+++ b/app/src/main/res/layout/activity_package_detail.xml
@@ -1,10 +1,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.naild2d.android.PackageDetailActivity">
+    tools:context="com.naild2d.android.activity.PackageDetailActivity">
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
@@ -16,64 +17,64 @@
                 android:id="@+id/home_adv"
                 android:layout_width="fill_parent"
                 android:layout_height="250dp"
-                android:src="#FFFFFF"
-                android:scaleType="fitXY"
-                android:background="@android:color/transparent"
-                android:layout_below="@+id/home_head_bar"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginTop="-20dp"/>
+                android:layout_below="@+id/home_head_bar"
+                android:layout_marginTop="-20dp"
+                android:background="@android:color/transparent"
+                android:scaleType="fitXY"
+                android:src="#FFFFFF" />
 
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="115dp"
-                android:src="@drawable/pkgdetail_price_bg"
-                android:scaleType="fitXY"
-                android:background="@android:color/transparent"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_marginLeft="15dp"
-                android:paddingBottom="15dp"/>
+                android:background="@android:color/transparent"
+                android:paddingBottom="15dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/pkgdetail_price_bg" />
 
             <RelativeLayout
                 android:id="@+id/home_head_bar"
                 android:layout_width="fill_parent"
                 android:layout_height="85dp"
-                android:orientation="horizontal"
                 android:layout_marginBottom="10dp"
-                android:background="@drawable/pkgls_top_bar">
+                android:background="@drawable/pkgls_top_bar"
+                android:orientation="horizontal">
 
                 <ImageButton
                     android:layout_width="30dp"
                     android:layout_height="30dp"
+                    android:layout_alignParentLeft="true"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="40dp"
-                    android:layout_alignParentLeft="true"
-                    android:src="@drawable/pkgls_back"
+                    android:background="@android:color/transparent"
                     android:scaleType="centerInside"
-                    android:background="@android:color/transparent" />
+                    android:src="@drawable/pkgls_back" />
 
                 <TextView
-                    android:layout_marginTop="36dp"
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
                     android:layout_centerHorizontal="true"
+                    android:layout_marginTop="36dp"
+                    android:background="@android:color/transparent"
+                    android:scaleType="centerInside"
                     android:text="甜美日系新娘"
                     android:textColor="#FFFFFF"
-                    android:textSize="30sp"
-                    android:scaleType="centerInside"
-                    android:background="@android:color/transparent" />
+                    android:textSize="30sp" />
 
                 <ImageButton
                     android:layout_width="30dp"
                     android:layout_height="30dp"
+                    android:layout_alignParentRight="true"
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="40dp"
-                    android:layout_alignParentRight="true"
-                    android:src="@drawable/pkgls_loc_normal"
+                    android:background="@android:color/transparent"
                     android:scaleType="centerInside"
-                    android:background="@android:color/transparent" />
+                    android:src="@drawable/pkgls_loc_normal" />
             </RelativeLayout>
         </RelativeLayout>
 
