--- a/app/src/main/res/layout/activity_pending_order_list.xml
+++ b/app/src/main/res/layout/activity_pending_order_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    tools:context="com.naild2d.android.PendingOrderListActivity">
+    tools:context="com.naild2d.android.activity.PendingOrderListActivity">
 
     <LinearLayout
         android:layout_width="fill_parent"
