--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.naild2d.android.TestActivity">
+    tools:context="com.naild2d.android.activity.TestActivity">
 
     <com.naild2d.android.component.ToggleServiceThumbnailView
         android:layout_width="200dp"
