--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_01"
-    tools:context="com.naild2d.android.UserProfileActivity">
+    tools:context="com.naild2d.android.activity.UserProfileActivity">
 
     <RelativeLayout
         android:id="@+id/home_head_bar"
