--- a/app/src/main/res/layout/activity_package_detail.xml
+++ b/app/src/main/res/layout/activity_package_detail.xml
@@ -1,84 +1,79 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/bg_01"
     tools:context="com.naild2d.android.activity.PackageDetailActivity">
+
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/home_head_bar"
+        android:layout_marginTop="-5dp"
+        android:scrollbars="none">
 
-            <ImageView
-                android:id="@+id/home_adv"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical">
+
+            <include layout="@layout/partial_package_details_head_image" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="5dp">
+
+                <include layout="@layout/partial_package_details_info" />
+
+                <Button
+                    android:id="@+id/btnLogin"
+                    android:layout_width="160dp"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="30dp"
+                    android:background="@drawable/btn_shuicai_pink"
+                    android:onClick="login"
+                    android:text="预约美丽"
+                    android:textColor="#ffffff"
+                    android:textSize="20sp" />
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:layout_marginBottom="30dp"
+                    android:layout_marginTop="30dp"
+                    android:src="@color/dark_gray" />
+            </LinearLayout>
+
+            <ListView
+                android:id="@+id/list"
                 android:layout_width="fill_parent"
-                android:layout_height="250dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/home_head_bar"
-                android:layout_marginTop="-20dp"
-                android:background="@android:color/transparent"
-                android:scaleType="fitXY"
-                android:src="#FFFFFF" />
-
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="115dp"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginLeft="15dp"
-                android:background="@android:color/transparent"
-                android:paddingBottom="15dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/pkgdetail_price_bg" />
-
-            <RelativeLayout
-                android:id="@+id/home_head_bar"
-                android:layout_width="fill_parent"
-                android:layout_height="85dp"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/pkgls_top_bar"
-                android:orientation="horizontal">
-
-                <ImageButton
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="40dp"
-                    android:background="@android:color/transparent"
-                    android:scaleType="centerInside"
-                    android:src="@drawable/pkgls_back" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="fill_parent"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="36dp"
-                    android:background="@android:color/transparent"
-                    android:scaleType="centerInside"
-                    android:text="甜美日系新娘"
-                    android:textColor="#FFFFFF"
-                    android:textSize="30sp" />
-
-                <ImageButton
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="40dp"
-                    android:background="@android:color/transparent"
-                    android:scaleType="centerInside"
-                    android:src="@drawable/pkgls_loc_normal" />
-            </RelativeLayout>
-        </RelativeLayout>
-
-
+                android:layout_height="800dp"
+                android:divider="@android:color/transparent" />
+        </LinearLayout>
     </ScrollView>
 
+    <RelativeLayout
+        android:id="@+id/home_head_bar"
+        style="@style/NailD2D_TopBarLayout"
+        android:background="@drawable/pkgls_top_bar">
+
+        <ImageButton
+            style="@style/NailD2D_TopBarBackButton"
+            android:background="@android:color/transparent"
+            android:onClick="back"
+            android:src="@drawable/pkgls_back" />
+
+        <TextView
+            style="@style/NailD2D_TopBarCenterText"
+            android:background="@android:color/transparent"
+            android:text="美甲服务"
+            android:textColor="#FFFFFF" />
+
+        <ImageButton
+            style="@style/NailD2D_TopBarRightImageButton"
+            android:src="@drawable/pkgls_loc_normal" />
+    </RelativeLayout>
 </RelativeLayout>
