--- a/app/src/main/res/layout/component_toggle_service_thumbnail.xml
+++ b/app/src/main/res/layout/component_toggle_service_thumbnail.xml
@@ -12,15 +12,15 @@
             android:layout_height="fill_parent"
             android:layout_weight="1">
 
-            <ImageView
-                android:id="@+id/item_thumbnail"
+            <com.naild2d.android.component.MyImageView
+                android:id="@+id/item_service_thumbnail"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:background="#aaaaaa"
                 android:scaleType="fitXY" />
 
             <ImageView
-                android:id="@+id/item_mask"
+                android:id="@+id/item_service_mask"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:background="@android:color/transparent"
@@ -36,14 +36,14 @@
             <ImageView
                 android:layout_width="5dp"
                 android:layout_height="10dp"
-                android:layout_alignTop="@+id/component_service_thumbnail_view_price"
+                android:layout_alignTop="@+id/item_service_price"
                 android:layout_marginTop="4dp"
-                android:layout_toLeftOf="@+id/component_service_thumbnail_view_price"
-                android:layout_toStartOf="@+id/component_service_thumbnail_view_price"
+                android:layout_toLeftOf="@+id/item_service_price"
+                android:layout_toStartOf="@+id/item_service_price"
                 android:src="@drawable/icon_yuan_black" />
 
             <TextView
-                android:id="@+id/component_service_thumbnail_view_price"
+                android:id="@+id/item_service_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
@@ -55,7 +55,7 @@
                 android:textStyle="bold" />
 
             <com.naild2d.android.component.ImageTextView
-                android:id="@+id/component_service_thumbnail_view_name"
+                android:id="@+id/item_service_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -67,7 +67,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/item_top_button"
+        android:id="@+id/item_service_top_button"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="@android:color/transparent" />
