--- a/app/src/main/res/layout/partial_package_details_info.xml
+++ b/app/src/main/res/layout/partial_package_details_info.xml
@@ -119,7 +119,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:onClick="showSchedule">
 
         <com.naild2d.android.component.ImageTextView
             android:layout_width="wrap_content"
