--- a/app/src/main/res/layout/activity_package_detail.xml
+++ b/app/src/main/res/layout/activity_package_detail.xml
@@ -78,7 +78,7 @@
             android:src="@drawable/pkgls_loc_normal" />
     </RelativeLayout>
 
-    <com.naild2d.android.component.OrderDateTableView
+    <com.naild2d.android.component.OrderDatePanelView
         android:id="@+id/pkg_schedule"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
