--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="half_dark_pink">#f5c4b8</color>
     <color name="light_gray">#ececed</color>
     <color name="dark_gray">#a9a9a9</color>
+
+    <color name="order_date_button_text_busy">#000000</color>
+    <color name="order_date_button_text_free">#71e2d4</color>
 </resources>
