完善订单功能

--- a/app/src/main/res/layout/activity_package_detail.xml
+++ b/app/src/main/res/layout/activity_package_detail.xml
@@ -35,7 +35,7 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="30dp"
                     android:background="@drawable/btn_shuicai_pink"
-                    android:onClick="login"
+                    android:onClick="submitOrder"
                     android:text="预约美丽"
                     android:textColor="#ffffff"
                     android:textSize="20sp" />
