--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -93,6 +93,7 @@
                     android:layout_marginBottom="10dp"
                     android:layout_marginRight="10dp"
                     android:background="@android:color/transparent"
+                    android:onClick="goToPackageList"
                     android:scaleType="fitEnd"
                     android:src="@drawable/home_btn_1" />
 
