--- a/app/src/main/res/layout/item_order_coupon.xml
+++ b/app/src/main/res/layout/item_order_coupon.xml
@@ -41,6 +41,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/item_price_layout"
@@ -72,6 +73,7 @@
                 android:textSize="12sp" />
 
             <TextView
+                android:id="@+id/item_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="2015.03.15"
