--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -24,7 +24,7 @@
             android:textColor="#FFFFFF" />
     </RelativeLayout>
 
-    <ImageView
+    <com.naild2d.android.component.MyImageView
         android:id="@+id/user_profile_pic"
         android:layout_width="80dp"
         android:layout_height="80dp"
